--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  */
 
 @import "bootstrap";
+@import "landing-page.min";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import "home";
